--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:all": "node tests/run-all-tests.js",
+    "test:local": "npm test",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "type-check": "tsc --noEmit",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run build && npm test"
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "ibge",
