--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -44,6 +44,8 @@ jobs:
           fi
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Checking if version $VERSION exists on npm..."
+          
+          # Check if version exists on npm
           if npm view ibge-localidades-sdk@$VERSION version > /dev/null 2>&1; then
             echo "Version $VERSION already exists on npm"
             echo "exists=true" >> $GITHUB_OUTPUT
@@ -51,6 +53,11 @@ jobs:
             echo "Version $VERSION does not exist on npm"
             echo "exists=false" >> $GITHUB_OUTPUT
           fi
+          
+          # Also check current package.json version
+          CURRENT_VERSION=$(node -p "require('./package.json').version")
+          echo "Current package.json version: $CURRENT_VERSION"
+          echo "Target version: $VERSION"
           
       - name: Update package.json version
         if: steps.check-version.outputs.exists == 'false'
@@ -60,7 +67,12 @@ jobs:
           else
             VERSION=${GITHUB_REF#refs/tags/v}
           fi
-          npm version $VERSION --no-git-tag-version
+          CURRENT_VERSION=$(node -p "require('./package.json').version")
+          if [ "$CURRENT_VERSION" != "$VERSION" ]; then
+            npm version $VERSION --no-git-tag-version
+          else
+            echo "Version $VERSION is already set in package.json"
+          fi
           
       - name: Publish to NPM
         if: steps.check-version.outputs.exists == 'false'
